fix: added oauth_provider to the userResource
